--- a/contato.html
+++ b/contato.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contato - TransLogística</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Contato</h1>
+    </header>
 
+    <button onclick="window.history.back();" class="back-button">Voltar</button>
+
+    <main>
+        <h2>Entre em contato conosco</h2>
+        <p>Preencha o formulário em nosso site ou ligue para nós!</p>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 TransLogística. Todos os direitos reservados.</p>
+    </footer>
+</body>
+</html>
