--- a/index.html
+++ b/index.html
@@ -5,8 +5,130 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TransLogística - Home</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            overflow: hidden; /* Para evitar barras de rolagem */
+        }
+
+        #background-video {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: -1; /* Coloca o vídeo atrás do conteúdo */
+        }
+
+        header {
+            background-color: rgba(0, 0, 0, 0.8);
+            color: #ffcc00;
+            padding: 20px;
+            text-align: center;
+        }
+
+        h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            padding: 20px;
+            position: relative; /* Para que os elementos flutuem dentro deste contêiner */
+        }
+
+        .card {
+            background-color: rgba(255, 204, 0, 0.9);
+            color: #000;
+            margin: 10px;
+            padding: 20px;
+            border-radius: 10px;
+            width: 200px;
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: transform 0.2s;
+            cursor: pointer;
+            animation: float 3s ease-in-out infinite; /* Animação de flutuação */
+        }
+
+        .card:hover {
+            transform: scale(1.05);
+        }
+
+        footer {
+            background-color: rgba(0, 0, 0, 0.8);
+            color: #ffcc00;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+
+        @keyframes float {
+            0% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-10px); /* Altura da flutuação */
+            }
+            100% {
+                transform: translateY(0);
+            }
+        }
+
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 10;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.7);
+        }
+
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+        }
+
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        .modal-image {
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
+    <video id="background-video" autoplay loop muted>
+        <source src="https://www.shutterstock.com/shutterstock/videos/1097274001/preview/stock-footage-worker-using-tablet-pc-and-statistical-data-inventory-control-warehouse-management-systems.webm" type="video/mp4">
+        Seu navegador não suporta vídeos.
+    </video>
+
     <header>
         <h1>Bem-vindo à TransLogística!</h1>
         <p>Seu parceiro confiável em transporte e logística.</p>
@@ -60,7 +182,7 @@
                 <li>JBS</li>
                 <li>Ambev</li>
             </ul>
-            <img src="https://www.busup.com/hubfs/Imported_Blog_Media/iStock-1204743098.jpg", alt="Imagem de parceiros" class="modal-image">
+            <img src="https://www.busup.com/hubfs/Imported_Blog_Media/iStock-1204743098.jpg" alt="Imagem de parceiros" class="modal-image">
         </div>
     </div>
 
@@ -110,3 +232,4 @@
     </script>
 </body>
 </html>
+
