--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <p><strong>Missão:</strong> Prestar, com excelência, serviço de transporte com qualidade e eficiência.</p>
             <p><strong>Visão:</strong> Ser uma empresa consolidada no setor logístico com qualidade total.</p>
             <p><strong>Valores:</strong> Ética, comprometimento, organização, profissionalismo, responsabilidade ambiental e transparência.</p>
-            <img src="https://www.iped.com.br/_upload/content/2015/01/24/3-ingredientes-empresa-sucesso.jpg">
+            <img src="https://static.vecteezy.com/system/resources/thumbnails/049/532/756/small_2x/logistics-center-warehouse-business-industry-shipping-distribution-storage-delivery-packages-cargo-retail-shelf-container-cardboard-box-freight-stock-transport-technology-hangar-indoor-video.jpg">
         </div>
     </div>
 
